tests/cases/traits/errors/impl-associated-unknown.ari
struct Point {
  x: i64,
}

fn main() -> i64 {
  let point = Point::missing(7);
  point.x
}
